<resources>
    <string name="app_name" translatable="false">Verclam Distrib</string>
    <string name="facebook_app_id" translatable="false"> YOUR_FACEBOOK_APP_ID </string>
    <string name="google_api_app_id" translatable="false"> YOUR_GOOGLE_APP_ID </string>
    <string name="addmob_AppID" translatable="false">ca-app-pub-4827016558246970~7160594867</string>
    <string name="actionSearch" translatable="false"> SEARCH </string>
    <string name="actionLanguage" translatable="false"> LANGUAGE </string>
    <string name="actionHome"> HOME</string>
    <string name="actionCategory"> CATEGORY </string>
    <string name="actionCategories"> CATEGORIES </string>
    <string name="actionShop"> SHOP </string>
    <string name="actionCart"> MY CART </string>
    <string name="actionOrders"> MY ORDERS </string>
    <string name="actionAccount"> MY ACCOUNT </string>
    <string name="actionAddresses"> MY ADDRESSES </string>
    <string name="actionFavourites"> MY FAVORITES </string>
    <string name="actionSettings"> SETTINGS </string>
    <string name="actionNews"> NEWS </string>
    <string name="actionIntro"> INTRO </string>
    <string name="address_info"> ADD ADDRESS </string>
    <string name="download"> DOWNLOAD </string>
    <string name="actionAbout"> ABOUT US </string>
    <string name="actionContactUs"> CONTACT US </string>
    <string name="actionShareApp"> SHARE APP </string>
    <string name="actionRateApp"> RATE APP </string>
    <string name="actionLogin"> LOGIN </string>
    <string name="actionLogout"> LOGOUT </string>
    <string name="homeStyle1"> HOME 1 </string>
    <string name="homeStyle2"> HOME 2 </string>
    <string name="homeStyle3"> HOME 3 </string>
    <string name="homeStyle4"> HOME 4 </string>
    <string name="homeStyle5"> HOME 5 </string>
    <string name="categoryStyle1"> CATEGORY 1 </string>
    <string name="categoryStyle2"> CATEGORY 2 </string>
    <string name="categoryStyle3"> CATEGORY 3 </string>
    <string name="categoryStyle4"> CATEGORY 4 </string>
    <string name="categoryStyle5"> CATEGORY 5 </string>
    <string name="categoryStyle6"> CATEGORY 6 </string>
    <string name="Sale"> SALE </string>
    <string name="Newest"> NEWEST </string>
    <string name="Featured"> FEATURED </string>
    <string name="all"> All </string>
    <string name="sale"> Sale </string>
    <string name="newest"> Newest </string>
    <string name="featured"> Featured </string>
    <string name="super_deals"> Deals </string>
    <string name="recentlyViewed"> Recently Viewed </string>
    <string name="news_all"> All News </string>
    <string name="news_categories"> News Categories </string>
    <string name="news_description"> News Description </string>
    <string name="ok"> OK </string>
    <string name="and"> and </string>
    <string name="NEW"> NEW </string>
    <string name="save"> Save </string>
    <string name="send"> Send </string>
    <string name="next"> Next </string>
    <string name="update"> Update </string>
    <string name="grant"> Grant </string>
    <string name="title"> Title </string>
    <string name="retry"> Retry </string>
    <string name="apply"> Apply </string>
    <string name="search"> Search </string>
    <string name="clear"> Clear </string>
    <string name="login"> Login </string>
    <string name="signup"> Signup </string>
    <string name="cancel"> Cancel </string>
    <string name="welcome"> Welcome </string>
    <string name="explore"> Explore </string>
    <string name="checkout"> Checkout </string>
    <string name="register"> Register </string>
    <string name="drawerOpen"> DrawerOpen </string>
    <string name="drawerClose"> DrawerClose </string>
    <string name="expire_download"> Expire on </string>
    <string name="card_number"> Card Number </string>
    <string name="card_cvv"> Card CVV </string>
    <string name="card_expiry"> Card Expiry </string>
    <string name="order_now"> Order Now </string>
    <string name="payment_details"> Payment Details </string>
    <string name="invalid_payment_token"> Invalid Payment Token </string>
    <string name="invalid_credit_card"> Invalid Credit Card Number </string>
    <string name="expired_card"> Card has been Expired </string>
    <string name="invalid_card_cvv"> Invalid Card CVV </string>
    <string name="cannot_get_payment_methods"> Error Getting Payment Methods </string>
    <string name="select_card_expiry"> Select your Card Expiry Date </string>
    <string name="view"> View </string>
    <string name="date"> Date </string>
    <string name="products"> Products </string>
    <string name="category"> Category </string>
    <string name="categories"> Categories </string>
    <string name="total_price"> Total Price </string>
    <string name="product_price"> Product Price </string>
    <string name="checkout_price"> Checkout Price </string>
    <string name="product_title"> Product Title </string>
    <string name="view_product"> View Product </string>
    <string name="quantity"> Quantity </string>
    <string name="description"> Description </string>
    <string name="attribute_name"> Attribute Name </string>
    <string name="product_description"> Product Description </string>
    <string name="google_login"> Google Login </string>
    <string name="facebook_login"> Facebook Login </string>
    <string name="in_stock"> In Stock </string>
    <string name="outOfStock"> Out of Stock </string>
    <string name="addToCart"> Add to Cart </string>
    <string name="check_out"> Checkout  </string>
    <string name="removeProduct"> Remove Product </string>
    <string name="save_address"> Save Address </string>
    <string name="save_changes"> Save Changes </string>
    <string name="reset_filters"> Reset Filters </string>
    <string name="continue_shopping"> Continue Shopping </string>
    <string name="order_id"> Order ID </string>
    <string name="order_status"> Order Status </string>
    <string name="order_date"> Order Date </string>
    <string name="order_details"> Order Details </string>
    <string name="order_confirmed"> Order Confirmed </string>
    <string name="order_notes"> Order Notes </string>
    <string name="cancel_order"> Cancel Order </string>
    <string name="no_of_products"> No. of Products </string>
    <string name="tax"> Tax </string>
    <string name="shipping"> Shipping </string>
    <string name="discount"> Discount </string>
    <string name="subtotal"> Subtotal </string>
    <string name="total"> Total </string>
    <string name="coupon"> Coupon </string>
    <string name="coupon_code"> Coupon Code </string>
    <string name="coupon_amount"> Coupon Amount </string>
    <string name="coupon_discount"> Coupon Discount </string>
    <string name="coupon_type"> Coupon Type </string>
    <string name="sample_coupons"> Sample Coupon Codes </string>
    <string name="payment_method"> Payment Method </string>
    <string name="billing_address"> Billing Address </string>
    <string name="shipping_address"> Shipping Address </string>
    <string name="shipping_method"> Shipping Method </string>
    <string name="choose_option"> Choose Option </string>
    <string name="additional_info"> Additional Info </string>
    <string name="related_products"> Related Products </string>
    <string name="continue_guest"> Continue as Guest </string>
    <string name="rate_product"> Rate Product </string>
    <string name="reviews_ratings"> Ratings and Reviews </string>
    <string name="full_name"> Full Name </string>
    <string name="first_name"> First Name </string>
    <string name="last_name"> Last Name </string>
    <string name="username"> Username </string>
    <string name="email"> Email </string>
    <string name="email_address"> Email Address </string>
    <string name="mobile"> Mobile </string>
    <string name="contact_no"> Contact No </string>
    <string name="address"> Address </string>
    <string name="address_1"> Address 1 </string>
    <string name="address_2"> Address 2 </string>
    <string name="company"> Company </string>
    <string name="country"> Country </string>
    <string name="zone"> Zone </string>
    <string name="city"> City </string>
    <string name="post_code"> Post Code </string>
    <string name="password"> Password </string>
    <string name="new_password"> New Password </string>
    <string name="edit_profile"> Edit Profile </string>
    <string name="thank_you"> Thank You </string>
    <string name="add_coupon"> Add Coupon? </string>
    <string name="your_message"> Your Message </string>
    <string name="empty_cart"> Your Cart is Empty </string>
    <string name="record_not_found"> No Record Found </string>
    <string name="item_added_to_cart"> Item Added to Cart </string>
    <string name="added_to_favourites"> Added to Favourites </string>
    <string name="removed_from_favourites"> Removed from Favourites </string>
    <string name="not_a_member"> Not a Member? </string>
    <string name="login_or_signup"> Login &amp; Register </string>
    <string name="login_or_create_account"> Please Login or create Account </string>
    <string name="thank_you_for_shopping"> Thank You for shopping with us! </string>
    <string name="coupon_removes_other_coupons"> This coupon may remove all other coupons! </string>
    <string name="forgot_your_password"> Forgot Your Password? </string>
    <string name="forgot_password"> I\'ve forgotten my password? </string>
    <string name="already_have_account"> Already have an account? </string>
    <string name="search_product_by_name"> Type Something to Search </string>
    <string name="default_shipping"> Default Shipping Address </string>
    <string name="order_placed"> Order Placed Successfully. </string>
    <string name="order_cancelled"> Order has been cancelled successfully. </string>
    <string name="account_updated"> Account Details has been updated successfully. </string>
    <string name="shipping_address_update"> Shipping address has been updated successfully. </string>
    <string name="permission_rejected"> Permission not Granted! </string>
    <string name="permission_camera_storage"> Need Camera and Storage Permissions! </string>
    <string name="permission_camera_storage_needed"> This app needs camera and storage permissions to take pictures from the gallery or with the camera. </string>
    <string name="rate_now"> Rate It! </string>
    <string name="not_now"> Not Now </string>
    <string name="rate_app_msg"> If you enjoy using this app, it would be great to take a moment to rate it. </string>
    <string name="enter_name"> Enter Your Name </string>
    <string name="enter_city"> Enter Your City </string>
    <string name="enter_message"> Enter Your Message </string>
    <string name="select_zone"> Select Your Zone </string>
    <string name="select_country"> Select Your Country </string>
    <string name="invalid_first_name"> Invalid First Name </string>
    <string name="invalid_last_name"> Invalid Last Name </string>
    <string name="invalid_email"> Invalid Email Address </string>
    <string name="invalid_password"> Invalid Password </string>
    <string name="invalid_name"> Invalid Name </string>
    <string name="invalid_address"> Invalid Address </string>
    <string name="invalid_company"> Invalid Company </string>
    <string name="invalid_contact"> Invalid Contact No. </string>
    <string name="invalid_post_code"> Invalid Postal Code </string>
    <string name="unexpected_response"> Unexpected Server Response </string>
    <string name="filter">Filter</string>
    <string name="sortby">Sort by</string>
    <string name="subcategory">Subcategory</string>
    <string name="attributes">Attributes</string>
    <string name="tagss">Tags</string>
    <string name="bypricerange">By price range</string>
    <string name="price">Price</string>
    <string name="bydate">By Date</string>
    <string name="like">Like</string>
    <string name="clearall">Clear All</string>
    <string name="orders">Orders</string>
</resources>