<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"

    >
<RelativeLayout
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:textColor="@color/black"
        android:text="@string/sortby"
        android:textSize="@dimen/small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</RelativeLayout>
    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:background="@color/bt_very_light_gray"
            android:layout_width="match_parent"
            android:layout_height="0.3dp"></View>
        <TextView
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:text="@string/bydate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_marginTop="7dp"
            android:background="@color/bt_very_light_gray"
            android:layout_width="match_parent"
            android:layout_height="0.3dp"></View>
        <TextView
            android:id="@+id/byprice"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:text="@string/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_marginTop="7dp"
            android:background="@color/bt_very_light_gray"
            android:layout_width="match_parent"
            android:layout_height="0.3dp"></View>
        <TextView
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:text="@string/like"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_marginTop="7dp"
            android:background="@color/bt_very_light_gray"
            android:layout_width="match_parent"
            android:layout_height="0.3dp"></View>
        <TextView
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:text="@string/orders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_marginTop="7dp"
            android:background="@color/bt_very_light_gray"
            android:layout_width="match_parent"
            android:layout_height="0.3dp"></View>
        <TextView
            android:id="@+id/canceltv"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:text="@string/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>